Se agregó la parte de descripción abajo

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio Hugo Moreno</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/reset.css">
+<link rel="stylesheet" href="css/normalized.css">
 </head>
 <body>
+  
     <main class="placeholder-content main">
     <header class="sticky-content">
         <p class="sticky-content-title">Hugo Moreno</p>
@@ -16,9 +19,11 @@
 
     </header>
     <section class="contacto">
+<p class="titulo2">Formulario de Contacto</p>
+<button>Contacto</button>
 
     </section>
-<section class="proyectos-titulo"><p>Proyectos</p>
+<section class="proyectos-titulo"><p class="texto-proyectos">Proyectos</p>
 
 </section>
    
@@ -35,8 +40,11 @@
             </div>
           </section>
  
-
+<section class="detalle">
+    <p>Proyectos</p>
+</section>
 </main>
+
 </body>
 
 </html>
