Agregando Progress bar

--- a/index.html
+++ b/index.html
@@ -41,7 +41,32 @@
           </section>
  
 <section class="detalle">
-    <p>Proyectos</p>
+    <div class="skills">
+    <h2>html</h2>
+    <div class="progress-bar">
+        <div class="html"><span>90%</span></div>
+    </div>
+    <h2>css</h2>
+    <div class="progress-bar">
+        <div class="css"><span>90%</span></div>
+    </div>
+
+    <h2>React</h2>
+    <div class="progress-bar">
+        <div class="react"><span>90%</span></div>
+    </div>
+
+
+    <h2>Shopify</h2>
+    <div class="progress-bar">
+        <div class="shopify"><span>90%</span></div>
+    </div>
+
+</div>
+
+
+
+    
 </section>
 </main>
 
