Cambios solicitados por el instructor

--- a/verdeverdadexamen copy.html
+++ b/verdeverdadexamen copy.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   
-    
+    <main class="placeholder-content main">
         <div class="grid-container">
             <div class="grid-item item1">
                 <div class="topnav">
@@ -75,6 +75,7 @@
 </section>
 </div></div>
 
+</main>
 
 </body>
 
